--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a target="_blank" href="#AboutMe">About Me</a></li>
           <li><a target="_blank" href="#Contact">Contact</a></li>
         </ul>
-        <ul class="side-nav" id="mobile-demo"><img class="img-responsive" src="assets/gp.png">
+        <ul class="side-nav" id="mobile-demo"><img class="img-responsive" src="assets/icons/gp.png">
           <li><a href="https://github.com/geraldperriman" class="navfont">Projects</a></li>
           <li><a href="https://www.linkedin.com/in/gerald-perriman" class="navfont">Contact</a></li>
           <li><a target="_blank" href="assets/resume.pdf" id="download-button" class="navfont">My Resume</a></li>
