--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <li><a target="_blank" href="#Contact">Contact</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo"><img class="img-responsive" src="assets/icons/gp.png">
-          <li><a href="https://github.com/geraldperriman" class="navfont">Projects</a></li>
-          <li><a href="https://www.linkedin.com/in/gerald-perriman" class="navfont">Contact</a></li>
+          <li><a href="#Projects" class="navfont">Projects</a></li>
+          <li><a href="#Contact" class="navfont">Contact</a></li>
           <li><a target="_blank" href="assets/resume.pdf" id="download-button" class="navfont">My Resume</a></li>
         </ul>
       </div>
