--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul class="side-nav" id="mobile-demo"><img class="img-responsive" src="assets/icons/gp.png">
           <li><a href="#Projects" class="navfont">Projects</a></li>
           <li><a href="#Contact" class="navfont">Contact</a></li>
-          <li><a target="_blank" href="assets/resume.pdf" id="download-button" class="navfont">My Resume</a></li>
+          <li><a target="_blank"  href="assets/resume.pdf" id="download-button" class="navfont">Resume</a></li>
         </ul>
       </div>
     </nav>
