--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 
 </head>
 <body>
@@ -32,7 +32,7 @@
           <li><a target="_blank" href="#Contact">Contact</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo"><img class="img-responsive" src="assets/icons/gp.png">
-          <li><a href="#Projects" class="navfont">Projects</a></li>
+          <li><a href="#Projects" class="navfont hvr-float">Projects</a></li>
           <li><a href="#Contact" class="navfont">Contact</a></li>
           <li><a target="_blank"  href="assets/resume.pdf" id="download-button" class="navfont">Resume</a></li>
         </ul>
@@ -225,6 +225,7 @@
           <div class ="row">
             <a target="_blank" href="https://www.linkedin.com/in/gerald-perriman"><img class="linkedinfoot hvr-float" src="assets/icons/footer-linkedin.png"  alt="Linkedin" /></a></li>
             <a target="_blank" href="https://github.com/geraldperriman"><img class="githubfoot hvr-float" src="assets/icons/github-footer.png"  alt="Git Hub" /></a></li>
+            <a href="mailto:web.dev.gerald@gmail.com"><img class="gmailfoot hvr-float" src="assets/icons/gmail-footer.png"  alt="Gmail" /></a></li>
             <a href="mailto:web.dev.gerald@gmail.com"><img class="gmailfoot hvr-float" src="assets/icons/gmail-footer.png"  alt="Gmail" /></a></li>
         </div>
         </div>
