--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <a href="#"><img id="logo" src="assets/icons/gp.png" class="brand-logo" alt="Gerald Perriman"/></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="contactcontainer" class="right hide-on-med-and-down">
-          <li><a target="_blank" href="#Projects">Projects</a></li>
-          <li><a target="_blank" href="#AboutMe">About Me</a></li>
-          <li><a target="_blank" href="#Contact">Contact</a></li>
+          <li><a target="_blank" class ="hvr-float" href="#Projects">Projects</a></li>
+          <li><a target="_blank" class="hvr-float" href="#AboutMe">About Me</a></li>
+          <li><a target="_blank" class="hvr-float" href="#Contact">Contact</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo"><img class="img-responsive" src="assets/icons/gp.png">
           <li><a href="#Projects" class="navfont hvr-float">Projects</a></li>
-          <li><a href="#Contact" class="navfont">Contact</a></li>
-          <li><a target="_blank"  href="assets/resume.pdf" id="download-button" class="navfont">Resume</a></li>
+          <li><a href="#Contact" class="navfont hvr-float">Contact</a></li>
+          <li><a target="_blank"  href="assets/resume.pdf" id="download-button" class="navfont hvr-float">Resume</a></li>
         </ul>
       </div>
     </nav>
