--- a/index.html
+++ b/index.html
@@ -199,9 +199,8 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h3 class="aboutmetitle" id="AboutMe" >About Me</h3>
-          <h5 class="left-align light black-text" id="aboutme">Hello World! My name is Gerald Perriman.I'm a Web Developer with a passion for UI/UX Design, Front-End/Back-End Developement.
-            Born and raised in Atlanta, Georgia.I obtaining a Bacheolrs in Business Administration from the Univeristy of West Georgia.
-            I have a diverse set of skills, ranging from design, to <span class="hello"> HTML + CSS + Javascript/JQuery + NodeJS + MongoDB.</span></h5>
+          <h5 class="left-align light black-text" id="aboutme">Hello World! My name is Gerald Perriman.I am a Web Developer with a passion for UI/UX Design and Front-End/Back-End Developement.
+            I was born and raised in Atlanta, Georgia. I obtained a Bachelor's in Business Administration from the Univeristy of West Georgia. I have a diverse set of skills, ranging from design, to <span class="hello"> HTML + CSS + Javascript/JQuery + NodeJS + ReactJS.</span></h5>
         </div>
       </div>
 
